--- a/html/assets_r/css/main.css
+++ b/html/assets_r/css/main.css
@@ -1,6 +1,12 @@
 /* Corrections */
 .logo img{
-    height:50px;
+    height:70px;
+}
+
+.image-placeholder{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .service-box img{
@@ -77,19 +83,36 @@
     padding-right: 60px;
 }
 
+.mt-10{
+    margin-top: 10px;
+}
+
+.mr-20{
+    margin-left: 20px;
+}
+
 .cause-info{
     background: #fbfbfb;
     border: 1px solid #f3f3f3;
     display: flex;
     justify-content: space-between;
+    padding:2px 40px 13px;
 }
 
 .dnt-gl{
     text-align: right;
 }
 
+.fltrs-lst {
+    display: block;
+}
+
 .fltrs-lst span.selected{
     color: #58bf00;
+}
+
+.prd-qunt .btn1-drk{
+    margin-bottom: 12px;
 }
 
 .food-details tr td{
@@ -230,7 +253,7 @@ ul.listing{
     font-size: 24px;
 }
 
-.calculator .steps-content input{
+.calculator .steps-content input, .auth-card input{
     background-color: #f2f2f4;
     font-size: 16px;
     border-radius: 0;
@@ -255,7 +278,7 @@ ul.listing{
 }
 
 .calculator .steps-content.ingredients{
-    padding: 40px 80px 40px 30px;
+    padding: 40px 70px 40px 30px;
     border-left: 10px solid #f2f2f4;
     position: relative;
 }
@@ -275,16 +298,200 @@ ul.listing{
     cursor: pointer;
 }
 
+.calculator .select2-container{
+    width: 100%;
+}
+
 .calculator .select2-container--default .select2-selection--single {
     background-color: #f2f2f4;
-    border-radius: 0;
     font-size: 16px;
+    border-radius: 0;
+    height: 58px;
+    color: #555;
+    font-style: italic;
+    /*margin-bottom: 10px;*/
+    box-shadow: 0 0 0 0;
+    border:0;
 }
 
 .select2.select2-container.select2-container--default.select2-container--below.select2-container--open{
     z-index: 9999;
 }
 
+.ingredients .select2-container--default .select2-selection--single .select2-selection__rendered{
+    padding: 18px 40px;
+}
+
+.ingredients .select2-container--default .select2-selection--single .select2-selection__arrow{
+    height: 58px;
+    width: 67px;
+}
+
+/*.ingredients .select2-container--default .select2-selection--single .select2-selection__arrow b{*/
+/*    border-width: 12px 7px 0 7px;*/
+/*    margin-left: -6px;*/
+/*    margin-top: -5px;*/
+/*}*/
+
+/*.ingredients .select2-container--default.select2-container--open .select2-selection--single .select2-selection__arrow b{*/
+/*    border-width: 0 7px 12px 7px;*/
+/*}*/
+
+.ingredients .cause-info{
+    display: flex;
+    justify-content: start;
+    /*padding: 13px 80px 13px 40px;*/
+    padding: 0 80px 0 0;
+}
+
+.ingredients .cause-info .content{
+    padding: 13px 0;
+}
+
+.ingredients .cause-info .details{
+    display: flex;
+}
+
+.ingredients .cause-info .details>div{
+    padding: 4px 6px;
+    background-color: #f2f2f4;
+}
+
+.calculator .steps-content.ingredients .remove{
+    width:67px;
+    height:100%;
+    position:absolute;
+    right: 0;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.calculator .steps-content.ingredients .weight, .calculator .steps-content.weights {
+    position: relative;
+}
+.calculator .steps-content.ingredients .weight input, .calculator .steps-content.weights .weight input{
+    width: 80px;
+    height: 100%;
+    text-align: center;
+    margin-right: 12px;
+    padding: 0;
+    background-color: #fbfbfb;
+    font-weight: bold;
+}
+.calculator .steps-content.ingredients .weight span{
+    font-weight: bold;
+    position: absolute;
+    font-size: 12px;
+    bottom: 20px;
+    left: 17px;
+    font-style: italic;
+}
+.calculator .steps-content.weights .weight span{
+    font-weight: bold;
+    position: absolute;
+    font-size: 12px;
+    bottom: 7px;
+    /* left: 17px; */
+    font-style: italic;
+    margin-left: 16px;
+}
+
+.calculator .steps-content.ingredients .weight span.line{
+    position: absolute;
+    bottom: 36px;
+    left: 13px;
+    /* height: 1px; */
+    width: 56px;
+    background-color: #272727;
+}
+
+.calculator .steps-content.weights .row> div{
+    display: flex;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.calculator .steps-content.weights .weight-title{
+    height: 59px;
+    width:200px;
+    background-color:#f2f2f4;
+    border: 1px solid #f2f2f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    /*text-transform: uppercase;*/
+    /*margin-right: 10px;*/
+}
+.calculator .results table td{
+    border-bottom: 0;
+}
+.calculator .results .nutrition-info{
+    padding: 0 10px 30px;
+}
+.calculator .results {
+    padding: 10px 30px 10px;
+}
+.calculator .results h3{
+    margin: 0;
+}
+
+/* Login Form */
+.auth-card{
+    max-width: 500px;
+    margin: auto;
+    /*padding: 40px;*/
+}
+
+.admin-layout form .action{
+    justify-content: center;
+    text-align: center;
+    margin: 10px 0;
+    display: grid;
+    align-items: center;
+}
+
+form .action{
+    justify-content: center;
+    text-align: center;
+    margin: 10px 0;
+}
+
+form .action .btn1{
+    display: inline;
+}
+
+@media (max-width:996px){
+    .fltrs-lst {
+        display: none;
+    }
+
+    .calculator .steps>div{
+        padding: 15px 30px;
+        font-size:12px;
+        border-right: 10px solid #58bf00;
+    }
+
+    .calculator .steps h4{
+        font-size: 20px;
+    }
+
+    .calculator .steps-content{
+        padding: 40px 0;
+        border-left: 0;
+    }
+
+    .calculator .steps-content.ingredients{
+        padding: 40px 70px 40px 0;
+        border-left: 0;
+        position: relative;
+    }
+}
 
 @media (max-width:768px){
     .feat-img:before{
@@ -306,7 +513,11 @@ ul.listing{
     }
 
     .logo img{
-        height:35px;
+        height:60px;
+    }
+
+    .admin-layout .nav_bar .logo img{
+        height: auto;
     }
 
     form.newsletter-frm>button{
@@ -328,4 +539,272 @@ ul.listing{
         font-size: 15px;
     }
 
+
+
+}
+
+/* Auth Page Layout */
+aside.sidebar{
+    position: fixed;
+    min-height: 100vh;
+    width:100%;
+    transition: all 0.7s ease-in-out;
+    right: 100%;
+    /*box-shadow: 0 20px 25px 5px rgb(0 0 0 / 0.1), 0 8px 10px 6px rgb(0 0 0 / 0.1);*/
+    border-left: 2px solid #f2f2f4;
+    z-index: 10;
+    background-color: #edf3e7;
+    border-radius: 0;
+}
+aside.sidebar.extend{
+    right: 0;
+}
+
+aside.sidebar ul{
+    /*margin: 20px 0;*/
+}
+
+aside.sidebar ul li{
+    /*padding: 20px 20px;*/
+    transition: all 0.2s ease-in-out;
+}
+
+aside.sidebar ul li:hover{
+    background-color: #daf3c0;
+    cursor: pointer;
+}
+aside.sidebar ul li a i{
+    font-size: 16px;
+    color: #a2a2a2;
+    margin-left: 10px;
+}
+aside.sidebar ul li a div{
+    text-decoration: none;
+    color: #272727;
+    text-transform: uppercase;
+    padding: 20px 20px;
+    font-weight: bold;
+    font-size: 12px;
+    border-bottom: 1px solid #f2f2f4;
+}
+
+.separator{
+    width: 2px;
+    background-color: rgba(255,255,255,0.5);
+    height: 100%;
+    visibility: hidden;
+}
+
+.admin-layout{
+    min-height: 100vh;
+    background-color: #F3F4F5;
+    /*background-color: white;*/
+}
+
+.admin-layout .menu-sec1{
+    background-color: white;
+}
+
+.admin-layout nav.system-nav{
+    display: block;
+}
+
+.admin-layout header.stick.style2{
+    display: block;
+}
+.admin-layout .nav_bar .logo{
+    margin-left: 20px;
+}
+.admin-layout .nav_bar>button{
+    float: right;
+    margin: 20px;
+}
+
+.admin-layout .page-top{
+    padding: 50px 0 40px;
+}
+
+.admin-layout .page-top > div{
+    justify-content: space-between;
+    display: flex;
+}
+
+.admin-layout .page-top .pg-tl h1{
+    color: #272727;
+    text-transform: uppercase;
+    font-size: 28px;
+    font-weight: 300;
+}
+
+.admin-layout .page-top .breadcrumb-item a{
+    color: #a2a2a2;
+}
+
+.admin-layout .page-top .actions{
+    display: flex;
+    align-items: baseline;
+}
+.admin-layout .page-top .actions .btn-error{
+    background-color: red;
+}
+
+.btn1, .btn1-drk{
+    display: flex;
+    align-items: baseline;
+}
+
+.admin-layout .error-message{
+    color: red;
+}
+
+.card{
+    /*box-shadow: 0 3px 3px -2px rgb(39 44 51 / 10%), 0 3px 4px 0 rgb(39 44 51 / 4%), 0 1px 8px 0 rgb(39 44 51 / 2%);*/
+    margin: 0 0.6rem 1.2rem 0.6rem;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #dfe2e6;
+    /*border-radius: 0.5rem;*/
+    transition: box-shadow .28s cubic-bezier(.4,0,.2,1);
+    will-change: box-shadow;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    padding: 15px;
+}
+
+/* Admin News */
+.admin-layout .news-box.style2 {
+    display: flex;
+    margin-bottom: 0;
+    /*align-items: center;*/
+}
+.admin-layout .news-box.style2 .news-thumb {
+    max-width: 200px;
+}
+.admin-layout .news-box.style2 .news-detail {
+    padding: 10px 5%;
+}
+.admin-layout .news-box.style2 .news-detail>.pst-meta {
+    margin-top: 10px;
+    margin-bottom: 8px;
+}
+
+.admin-layout .blg-mta h2{
+    text-transform: uppercase;
+    font-weight: 300;
+    margin-top: 60px;
+}
+
+
+.admin-layout .form label{
+  text-transform: uppercase;
+    margin-top: 12px;
+    color: #a2a2a2;
+}
+.admin-layout .form input, .admin-layout .form select{
+    width:100%;
+    background-color: #fafafa;
+    font-size: 16px;
+    border-radius: 0;
+    border: 1px solid #f2f2f4;
+    padding: 20px;
+    color: #555;
+    margin-bottom: 10px;
+    box-shadow: 0 0 0 0;
+}
+
+.tb-br-cnt1>li.socials span{
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
+}
+.tb-br-cnt1>li.socials i{
+    margin-left: 10px;
+}
+.style2 .blg-mta .pst-meta{
+    margin-bottom: 20px;
+}
+
+.blg-mta .body img{
+    max-width: 400px;
+    max-height:280px;
+    margin: auto;
+}
+
+#toast-danger, #toast-success, #toast-warning{
+    max-width: 300px;
+}
+
+
+@media only screen and (min-width:280px) {
+    aside.sidebar{
+        width: 280px;
+        right: -280px;
+    }
+    aside.sidebar.extend{
+        right: 0;
+        left: auto;
+    }
+}
+
+.navbar{
+    transition: all 0.7s ease-in-out;
+}
+
+.navigation-buttons{
+    visibility: visible;
+}
+
+.system-content{
+    padding: 10px;
+    transition: all 0.7s ease-in-out;
+}
+
+.system-content header{
+    display: flex;
+    justify-content: center;
+}
+
+@media only screen and (min-width:550px) {
+    .system-content{
+        padding: 40px;
+    }
+}
+
+@media only screen and (min-width:768px) {
+    .system-content header{
+        display: block;
+    }
+    .system-content header > div{
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+@media only screen and (min-width:1120px) {
+    .navigation-buttons{
+        visibility: hidden;
+    }
+
+    .separator{
+        visibility: visible;
+    }
+
+    aside.sidebar{
+        right: 0;
+        left: auto;
+    }
+    .system-content{
+        padding: 20px 320px 40px 40px;
+    }
+    .navbar{
+        padding-right: 280px;
+    }
+}
+@media only screen and (min-width:1300px) {
+    .system-content{
+        padding: 40px 340px 40px 60px;
+    }
 }
