--- a/html/assets_r/css/main.css
+++ b/html/assets_r/css/main.css
@@ -210,6 +210,11 @@
     margin-right: 10px;
 }
 
+.title-style2>h3{
+    font-size: 25px;
+    text-transform: uppercase;
+}
+
 .charts{
     display: flex;
     align-items:center;
@@ -230,7 +235,7 @@
 .charts .source{
     font-weight: normal;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 25px;
     font-family:Montserrat, "sans-serif";
     margin-left: 20px;
 }
