--- a/html/assets_r/css/main.css
+++ b/html/assets_r/css/main.css
@@ -252,6 +252,24 @@
     text-align: left;
 }
 
+.composition-table .pagination>li>a, .composition-table .pagination>li>span{
+    border:0;
+    color: #58bf00;
+}
+
+.composition-table .page-item.active .page-link{
+    color: white;
+    background-color: #58bf00;
+}
+
+.composition-table .table-view, .search-results .table-view{
+    overflow-x: scroll;
+}
+
+.composition-table .table-view table, .search-results .table-view table{
+    min-width: 1000px;
+}
+
 .title-style2>h3{
     font-size: 25px;
     text-transform: uppercase;
@@ -412,11 +430,11 @@
 .calculator .steps>div{
     margin: 0;
     padding: 20px 40px;
-    background-color: #272727;
-    color: white;
+    /* background-color: #f4f4f4; */
+    color: #58bf00;
     text-transform: uppercase;
     font-weight: bold;
-    border-right: 15px solid #58bf00
+    border-left: 10px solid #58bf00;
 }
 
 .calculator .steps h4{
@@ -719,10 +737,14 @@ form .action .btn1{
         display: none;
     }
 
+    .calculator .steps{
+       /*display: block;*/
+    }
+
     .calculator .steps>div{
-        padding: 15px 30px;
-        font-size:12px;
-        border-right: 10px solid #58bf00;
+        padding: 10px 20px;
+        font-size: 12px;
+        border-left: 10px solid #58bf00;
     }
 
     .calculator .steps h4{
@@ -820,6 +842,19 @@ form .action .btn1{
 
     .composition-table .statistic .info p{
         font-size: 14px;
+    }
+
+    .charts .display{
+        width: 80px;
+        height: 80px;
+    }
+
+    .charts .chart-info{
+        font-size: 16px;
+    }
+    .charts .source{
+        font-size: 23px;
+        margin-left: 20px;
     }
 
 
@@ -1018,7 +1053,7 @@ aside.sidebar ul li a div{
 .blg-mta .body img{
     max-width: 400px;
     max-height:280px;
-    margin: auto;
+    margin: 0 20px 20px 0;
 }
 
 #toast-danger, #toast-success, #toast-warning{
