UI Changes - Recipe Calculator

--- a/html/assets_r/css/main.css
+++ b/html/assets_r/css/main.css
@@ -30,10 +30,15 @@
     color:#272727;
     font-size:30px;
     text-transform:uppercase;
-    font-weight: bold;
+    font-weight: 300;
 }
 .app-layout .feat-img{
     height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #577e48;
+    background-blend-mode: luminosity;
 }
 
 .image-placeholder{
@@ -44,7 +49,7 @@
 
 .image-overlay{
     background-blend-mode: darken;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.5);
 }
 
 .service-box img{
@@ -56,6 +61,7 @@
     font-weight:bold;
     text-transform: capitalize;
     font-size: 70px;
+    color: white;
 }
 
 .feat-img{
@@ -137,8 +143,11 @@
     border: 1px solid #f3f3f3;
     display: flex;
     justify-content: space-between;
-    padding:2px 40px 13px;
+    padding:2px 40px 0;
+    align-items: center;
 }
+
+
 
 .dnt-gl{
     text-align: right;
@@ -274,6 +283,13 @@
     min-width: 1000px;
 }
 
+.composition-table .table-view table tbody a{
+    color: #444;
+}
+.composition-table .table-view table tbody a:hover{
+    color: #58bf00;
+}
+
 /*.composition-table .table-view, .search-results .table-view{
     overflow-x: scroll;
 }
@@ -391,6 +407,15 @@
 .contact.news-detail{
     background-color: #f2f2f4;
     margin-bottom: 30px;
+    min-height: 270px;
+}
+
+@media (max-width:996px){
+    .contact.news-detail{
+        background-color: #f2f2f4;
+        margin-bottom: 30px;
+        min-height: auto;
+    }
 }
 
 .contact.news-detail h2{
@@ -422,7 +447,7 @@
 .contact-form input, .contact-form textarea{
     background-color: #f2f2f4;
     font-size: 16px;
-    border-radius: 0;
+    border-radius: 9999px;
     padding-left: 40px;
     padding-right: 40px;
     margin-bottom:12px;
@@ -438,7 +463,7 @@
     display: flex;
     align-items: center;
 }
-.calculator .steps>div{
+.calculator .steps div.step{
     margin: 0;
     padding: 20px 40px;
     /* background-color: #f4f4f4; */
@@ -452,17 +477,38 @@
     margin-left: 20px;
     font-weight: 500;
     font-size: 24px;
+    text-transform: none;
 }
 
-.calculator .steps-content input, .auth-card input{
-    background-color: #f2f2f4;
+.calculator .steps-content input, .auth-card input, .calculator .steps-content .modal-body input, .modal-body select, .pg-srch-frm input.search{
+    background-color: #fbfbfb;
+    border: 1px solid #f3f3f3;
     font-size: 16px;
-    border-radius: 0;
+    border-radius: 9999px;
     padding: 20px 40px;
     color: #555;
-    font-style: italic;
+    /*font-style: italic;*/
     margin-bottom: 10px;
     box-shadow: 0 0 0 0;
+}
+
+.calculator .steps-content .modal-body input, .modal-body select{
+    min-height:59px;
+    float: none;
+    font-size: 12px;
+    /*margin: 16px 0;*/
+}
+
+.pg-srch-frm input.search{
+    min-height:59px;
+    float: none;
+    font-size: 14px;
+    margin-bottom: 0;
+}
+.calculator .steps-content .modal-body .grams{
+    top: 21px;
+    right: 60px;
+    font-size: 12px;
 }
 
 .calculator .steps-content p{
@@ -479,7 +525,7 @@
 }
 
 .calculator .steps-content.ingredients{
-    padding: 40px 70px 40px 30px;
+    padding: 40px 0 40px 30px;
     border-left: 10px solid #f2f2f4;
     position: relative;
 }
@@ -504,8 +550,8 @@
 }
 
 .calculator .select2-container--default .select2-selection--single {
-    background-color: #f2f2f4;
-    font-size: 16px;
+    /*background-color: #f2f2f4;*/
+    font-size: 12px;
     border-radius: 0;
     height: 58px;
     color: #555;
@@ -513,6 +559,11 @@
     /*margin-bottom: 10px;*/
     box-shadow: 0 0 0 0;
     border:0;
+    border-bottom: 1px solid #f2f2f4;
+}
+
+.calculator .modal-body .select2-container--default .select2-selection--single .select2-selection__rendered{
+    font-size: 12px;
 }
 
 .select2.select2-container.select2-container--default.select2-container--below.select2-container--open{
@@ -524,8 +575,11 @@
 }
 
 .ingredients .select2-container--default .select2-selection--single .select2-selection__arrow{
-    height: 58px;
-    width: 67px;
+    height: 30px;
+    width: 30px;
+    margin-top: 15px;
+    border-radius: 50%;
+
 }
 
 /*.ingredients .select2-container--default .select2-selection--single .select2-selection__arrow b{*/
@@ -540,13 +594,18 @@
 
 .ingredients .cause-info{
     display: flex;
-    justify-content: start;
+    /*justify-content: start;*/
     /*padding: 13px 80px 13px 40px;*/
-    padding: 0 80px 0 0;
+    /*padding: 0 80px 0 0;*/
+    border-radius: 9999px;
 }
 
 .ingredients .cause-info .content{
     padding: 13px 0;
+    margin-left: 30px;
+}
+.ingredients .cause-info .content a{
+    color: #444;
 }
 
 .ingredients .cause-info .details{
@@ -559,9 +618,10 @@
 }
 
 .calculator .steps-content.ingredients .remove{
-    width:67px;
-    height:100%;
-    position:absolute;
+    width:20px;
+    height:20px;
+    border-radius: 50%;
+    /*position:absolute;*/
     right: 0;
     background-color: red;
     display: flex;
@@ -571,6 +631,7 @@
     color: white;
     text-transform: uppercase;
     cursor: pointer;
+    font-size: 10px;
 }
 .calculator .steps-content.ingredients .weight, .calculator .steps-content.weights {
     position: relative;
@@ -582,15 +643,17 @@
     margin-right: 12px;
     padding: 0;
     background-color: #fbfbfb;
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 .calculator .steps-content.ingredients .weight span{
-    font-weight: bold;
-    position: absolute;
-    font-size: 12px;
-    bottom: 20px;
-    left: 17px;
-    font-style: italic;
+    /*font-weight: bold;*/
+    /*position: absolute;*/
+    font-size: 18px;
+
+    /*bottom: 20px;*/
+    /*left: 17px;*/
+    /*font-style: italic;*/
+    font-family: "Montserrat",sans-serif;
 }
 .calculator .steps-content.weights .weight span{
     font-weight: bold;
@@ -619,13 +682,14 @@
 
 .calculator .steps-content.weights .weight-title{
     height: 59px;
-    width:200px;
+    width:100%;
     background-color:#f2f2f4;
     border: 1px solid #f2f2f4;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: bold;
+    /*font-weight: bold;*/
+    border-radius: 9999px;
     /*text-transform: uppercase;*/
     /*margin-right: 10px;*/
 }
@@ -753,7 +817,7 @@ form .action .btn1{
        /*display: block;*/
     }
 
-    .calculator .steps>div{
+    .calculator .steps div.step{
         padding: 10px 20px;
         font-size: 12px;
         border-left: 10px solid #58bf00;
@@ -769,7 +833,7 @@ form .action .btn1{
     }
 
     .calculator .steps-content.ingredients{
-        padding: 40px 70px 40px 0;
+        padding: 40px 0 40px 0;
         border-left: 0;
         position: relative;
     }
@@ -1143,5 +1207,30 @@ aside.sidebar ul li a div{
 @media only screen and (min-width:1300px) {
     .system-content{
         padding: 40px 340px 60px 60px;
+    }
+}
+
+@media (max-width:768px){
+    .ingredients  .cause-info{
+        display: block;
+        padding: 3px 5% 13px;
+        border-radius: 12px;
+    }
+
+    .calculator .steps-content.ingredients .remove{
+        background-color: transparent;
+        color: red;
+    }
+    .calculator .steps-content.ingredients .weight{
+        text-align: right;
+        font-size: 18px;
+    }
+
+    .calculator .steps div.step{
+        padding: 10px 20px;
+    }
+
+    .calculator .steps {
+        display: block;
     }
 }
