--- a/html/css/app.css
+++ b/html/css/app.css
@@ -32469,6 +32469,55 @@ select {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+*{
+  font-family: "Montserrat";
+}
+
+.feature{
+  /*display: flex;*/
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.feature .details{
+  margin-left: 100px;
+}
+
+.feature h2{
+  color: #333;
+  font-size: 15px;
+  margin-top: 0;
+  text-transform: uppercase;
+}
+
+.feature a{
+  border-bottom: 1px solid;
+  /*float: left;*/
+  font-family: montserrat;
+  font-size: 11px;
+  margin-top: 6px;
+  text-transform: uppercase;
+  color: #58bf00;
+}
+
+.feature .image{
+  background: #fff;
+  -ms-box-shadow: 0 10px 13px rgba(14, 44, 53, .14);
+  -o-box-shadow: 0 10px 13px rgba(14, 44, 53, .14);
+  box-shadow: 0 10px 13px rgba(14, 44, 53, .14);
+  float: left;
+  line-height: 98px;
+  margin-right: 30px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+
+.feature img{
+  margin: 12px auto 0 auto;
+  width: 45px;
+}
+
 .calculator{
   padding: 20px 0;
 }
@@ -32698,6 +32747,44 @@ select {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.swiper {
+  width: 100%;
+  height: 600px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  color:black;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.food-item-content{
+  width: 100%;
+  background-color: #fbfbfb;
+  border: 1px solid #f3f3f3;
+  border-radius: 9999px;
+  padding: 12px 24px;
+  /*margin-bottom: 16px;*/
+  min-height: 72.57px;
+}
+
+.food-item-content-body {
+  font-size: 20px;
 }
 
 @media (min-width: 640px) {
@@ -191029,7 +191116,4 @@ select {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
-
-
-
 
