--- a/html/assets_r/css/main.css
+++ b/html/assets_r/css/main.css
@@ -363,14 +363,13 @@
 
 .faq .number{
     position: absolute;
-    background-color: #58bf00;
-    color: white;
-   /* background-color: #f2f2f4;
-    color: #272727;*/
-    font-weight: bold;
-    font-size: 18px;
-    width: 40px;
-    height: 40px;
+    background-color: #f2f2f2;
+    /* color: white; */
+    /* font-weight: bold; */
+    font-size: 12px;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
